crates/infinity-agent-cli/tests/snapshots/tui_widechar_snapshots__emoji_status_row.snap
---
source: crates/infinity-agent-cli/tests/tui_widechar_snapshots.rs
expression: h.screen_with_scrollback()
---
~ 
~ 
~ 
~ 
~ 
~ 
~ 
~ 
~ 
┌────────────────────────────────────────────────────────────────────────────────┐
│                                                                                │
│                                                                                │
│                                                                                │
│Infinity Agent CLI                                                              │
│Type your messages below. /help for commands. Ctrl+C to exit.                   │
│                                                                                │
│                                                                                │
│────────────────────────────────────────────────────────────────────────────────│
│                                                                                │
│                                                                                │
│                                                                                │
│🚀 rocket-model 🚀 (/help for commands)                          0% context used│
└────────────────────────────────────────────────────────────────────────────────┘
cursor: row=9 col=1
