crates/infinity-agent-cli/tests/snapshots/tui_widechar_snapshots__thinking_emoji.snap
---
source: crates/infinity-agent-cli/tests/tui_widechar_snapshots.rs
expression: h.screen_with_scrollback()
---
~ 
~ 
~ 
~ 
~ 
~ 
~ 
~ 
~ 
~ 
~ 
┌────────────────────────────────────────────────────────────────────────────────┐
│                                                                                │
│Infinity Agent CLI                                                              │
│Type your messages below. /help for commands. Ctrl+C to exit.                   │
│                                                                                │
│> react                                                                         │
│                                                                                │
│██████████ 🚀🚀🚀 thinking with emoji 🎉🎉🎉 🚀🚀🚀 thinking with emoji 🎉🎉🎉  │
│────────────────────────────────────────────────────────────────────────────────│
│                                                                                │
│                                                                                │
│                                                                                │
│/help for commands                                 mock: mock-model · 0% context│
└────────────────────────────────────────────────────────────────────────────────┘
cursor: row=9 col=1
