crates/infinity-agent-cli/tests/snapshots/tui_widechar_snapshots__thread_row_cjk.snap
---
source: crates/infinity-agent-cli/tests/tui_widechar_snapshots.rs
assertion_line: 31
expression: h.screen_with_scrollback()
---
~ 
~ 
~ 
~ 
~ 
~ 
~ 
~ 
~ 
~ 
~ 
~ 
┌────────────────────────────────────────────────────────────────────────────────┐
│                                                                                │
│                                                                                │
│Infinity Agent CLI                                                              │
│Type your messages below. /help for commands. Ctrl+C to exit.                   │
│                                                                                │
│> translate things                                                              │
│                                                                                │
│▄▄▄▄▄▄▄▄▄▄                                                                      │
│child-cj 溢出这是一个很长的中文句子用来测试宽字符在线程行中的显示效果应该会溢出 │
│────────────────────────────────────────────────────────────────────────────────│
│                                                                                │
│                                                                                │
│                                                                                │
│/help for commands                                 mock: mock-model · 0% context│
└────────────────────────────────────────────────────────────────────────────────┘
cursor: row=11 col=1
